# AshEmu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
auth/: CMakeLists.txt
auth/include/: auth.h
auth/src/: auth_server.c  auth_session.c  main.c
common/: CMakeLists.txt
common/include/: common.h  crypto.h  network.h  opcodes.h  packet.h
common/src/: common.c  crypto.c  network.c  packet.c  worldcrypt.c
database/: CMakeLists.txt
database/include/: database.h  models.h
database/src/: database.c  models.c
launcher/: CMakeLists.txt
launcher/src/: main.c
world/: CMakeLists.txt
world/include/: player.h  positions.h  update.h  world.h
world/src/: main.c  player.c  positions.c  update.c  world_server.c  world_session.c
